# macrdp

./: .gitignore  Cargo.toml  Makefile  README.md  README_EN.md  config.example.toml  config.zh.example.toml  icon.icns
crates/ironrdp-acceptor-patched/: .cargo_vcs_info.json  Cargo.toml
crates/ironrdp-acceptor-patched/src/: connection.rs
crates/ironrdp-server-gfx/: .cargo_vcs_info.json  Cargo.toml
crates/ironrdp-server-gfx/src/: display.rs  gfx.rs  lib.rs  server.rs
crates/ironrdp-server-gfx/src/encoder/: mod.rs
crates/macrdp-capture/: Cargo.toml
crates/macrdp-capture/src/: lib.rs
crates/macrdp-core/: Cargo.toml
crates/macrdp-core/src/: callbacks.rs  config.rs  display.rs  handler.rs  lib.rs  permissions.rs  server.rs  tls.rs
crates/macrdp-encode/: Cargo.toml
crates/macrdp-encode/benches/: encode_bench.rs
crates/macrdp-encode/src/: color_convert.rs  lib.rs  openh264_enc.rs  videotoolbox.rs  yuv444_split.rs
crates/macrdp-input/: Cargo.toml
crates/macrdp-input/src/: keyboard.rs  keymap.rs  lib.rs  mouse.rs
crates/macrdp-server/: Cargo.toml  build.rs
crates/macrdp-server/src/: config.rs  display.rs  handler.rs  main.rs  tls.rs
macrdp-ui/: build-cli.sh  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
macrdp-ui/src/: App.tsx
macrdp-ui/src-tauri/: Cargo.toml  tauri.conf.json
macrdp-ui/src-tauri/src/: commands.rs  database.rs  event_bridge.rs  lib.rs  main.rs  permissions.rs  state.rs  tray.rs  ui_config.rs
macrdp-ui/src/components/: MetricsStrip.tsx  PermissionBanner.tsx  PermissionCard.tsx  ServerInfoTags.tsx  Sidebar.tsx  StatusBadge.tsx  ThemeToggle.tsx
macrdp-ui/src/contexts/: ThemeContext.tsx
macrdp-ui/src/hooks/: useConnections.ts  useLogs.ts  useMetrics.ts  useServerStatus.ts
macrdp-ui/src/lib/: format.ts  ipc.ts  types.ts
macrdp-ui/src/pages/: About.tsx  Dashboard.tsx  Logs.tsx  Permissions.tsx  Popover.tsx  Settings.tsx  Statistics.tsx
macrdp-ui/src/styles/: globals.css
