[package]
name = "macrdp-encode"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
openh264 = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "encode_bench"
harness = false
